--- a/src/app/main/trainings/corporate-training/corporate-training.component.scss
+++ b/src/app/main/trainings/corporate-training/corporate-training.component.scss
@@ -264,3 +264,9 @@
         }
     }
 }
+
+@media(max-width:400px) {
+    .bi.bi-check{
+        display:none;
+    }
+}
